
  The console optionally automatically distributes changed files when
  processes are started.

  The -httpplugin and -newhttpplugin TCPProxy filter options have been
  removed. They were deprecated in 3.0-beta29. The new -http filter should
  be used instead.

  Upgrade embedded version of Jython from Jython 2.1 to Jython 2.2.1.


The Grinder 3.0-beta33
----------------------

  Fulfil Feature Request 1524827 - Mnemonics needed. Requested by
  Travis Bear.

  Fulfil Feature Request 1484448 - Console window size doesn't persist.
  Requested by Travis Bear.

  Fulfil Feature Request 1185967 - Insert comments while capturing with
  the TCPProxy. Patch implemented by Venelin Mitov.

  Really fix bug 1495428 - Plugin thread context not correctly
  registered for events. This bug prevented custom plugins from
  receiving thread lifecycle events but did not affect the HTTP
  plugin. Thanks to Klaus-Peter Berg for reporting that this was still
  broken.

  Fix bug 1638659 - Deadlock in SleeperImplementation. Thanks to
  Bruce Adams for the report.

  Change the console's monitoring of changes to files so that it no
  longer assumes system time matches the file system time. This should
  fix some subtle bugs, particularly for file systems on shared storage.

  Fix bug 1639383 - Extra lines added to Content-Disposition. Previously,
  The Grinder relied on the script maintaining line endings for textual
  POST bodies, in particular multipart/form-data. This was brittle, text
  editors, email, and cross platform transfer frequently alters line
  endings; and I'm sure the Jython interpreter also takes a liberal
  approach where a file has mixed line endings. I've applied a simple
  escaping scheme to fix this. Thanks to Claes T Tenell for the report.

  Fix bug 1228335 - File editing should consider end of line. The console
  editor now canonicalises line endings on input, and uses the host
  platform line ending on output.
